--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "mongoose": "^6.5.4"
   },
